# timetracker

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml
assets/: main.css
src/: main.rs  routes.rs  templates.rs
src/templates/: base.html
templates/: base.html  hello.html  index.html
templates/components/: todo-form.html
templates/layouts/: base.html
templates/pages/: another-page.html  hello.html  index.html  time.html  todo.html
templates/playground/: test.html
