[package]
name = "static"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.0"
askama = { version = "0.12.0" }
askama_axum = { version = "0.4.0" }
axum = "0.7.0"
serde = { version = "1.0.0", features = ["derive"] }
tokio = { version = "1.35.0", features = ["full"] }
tower = "0.4.0"
tower-http = { version = "0.5.0", features = ["fs"] }
tower-livereload = "0.9.1"
tracing = "0.1.0"
shuttle-axum = "0.36.0"
shuttle-runtime = "0.36.0"
chrono = "0.4.31"
time = { version = "0.3.0", features = ["serde"] }


[profile.dev.package.askama_derive]
opt-level = 3 # faster compile https://djc.github.io/askama/performance.html